Kubernetes/ephemeral-container/payments-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments
  namespace: shop
spec:
  replicas: 1
  selector:
    matchLabels: { app: payments }
  template:
    metadata:
      labels: { app: payments }
    spec:
      containers:
        - name: payments
          image: traefik/whoami:v1.10.1
          args: ["--port", "9090", "--bogus-flag"]
