Kubernetes/ephemeral-container/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: shop
spec:
  selector: { app: api }
  ports:
    - port: 80
      targetPort: 8081
