Kubernetes/ephemeral-container/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: shop
spec:
  selector: { app: frontend }
  ports:
    - port: 80
      targetPort: 80
