Kubernetes/ephemeral-container/networking.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-only-from-api
  namespace: shop
spec:
  podSelector:
    matchLabels: { app: redis }
  ingress:
    - from:
        - podSelector:
            matchLabels: { app: api }
